--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ If your plugin does not need CSS, delete this file.
     margin: 0;
     padding: 0;
     width: 100%;
+    background-color: transparent;
 }
 
 .man-compact-setting .setting-item {
